--- a/package.json
+++ b/package.json
@@ -6,7 +6,14 @@
     "build": "next build",
     "dev": "next dev",
     "fmt": "pnpm biome format . --write && pnpm biome check . --write",
-    "start": "next start"
+    "start": "next start",
+    "db:generate": "drizzle-kit generate",
+    "db:migrate": "drizzle-kit migrate",
+    "db:push": "drizzle-kit push",
+    "db:studio": "drizzle-kit studio",
+    "db:seed": "tsx lib/db/seed.ts",
+    "db:reset": "tsx lib/db/seed.ts --clear",
+    "db:test": "tsx lib/db/test-connection.ts"
   },
   "dependencies": {
     "@fingerprintjs/fingerprintjs": "^5.0.1",
@@ -41,15 +48,18 @@
     "@unkey/ratelimit": "^2.1.3",
     "ai": "latest",
     "autoprefixer": "^10.4.20",
+    "better-auth": "^1.3.34",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
     "date-fns": "4.1.0",
+    "drizzle-orm": "^0.44.7",
     "embla-carousel-react": "8.5.1",
     "input-otp": "1.4.1",
     "lucide-react": "^0.548.0",
     "next": "16.0.0",
     "next-themes": "latest",
+    "postgres": "^3.4.7",
     "react": "19.2.0",
     "react-day-picker": "9.11.1",
     "react-dom": "19.2.0",
@@ -71,8 +81,10 @@
     "@types/node": "^22",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "drizzle-kit": "^0.31.6",
     "postcss": "^8.5",
     "tailwindcss": "^4.1.9",
+    "tsx": "^4.20.6",
     "tw-animate-css": "1.3.3",
     "typescript": "^5.1.0"
   }
