--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,11 @@ yarn-error.log*
 
 # env files
 .env*
+!.env.example
+
+# database
+lib/db/migrations/*
+!lib/db/migrations/.gitkeep
 
 # vercel
 .vercel
@@ -25,3 +30,8 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# auth
+auth-secret.txt
+*.pem
+*.key
